--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.75.1",
+    "autoprefixer": "^10.4.21",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "next": "15.5.6",
@@ -18,7 +20,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@tailwindcss/typography": "^0.5.19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
